changed raghav image for pritish for his resume

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 							<div class="team-member">
 								<div class="team-member-holder wow flipInY" data-wow-duration="1s" data-wow-delay="1100ms">
 									<div class="team-member-image">
-										<img src="images/team/member-4.jfif" alt="" /> <!-- Change Image -->	
+										<img src="images/tatti.jpg" alt="" /> <!-- Change Image -->	
 										<div class="team-overlay">
 											<div class="img-overlay"></div>
 										</div>
@@ -429,7 +429,7 @@
 										</div>
 									</div>
 									<div class="team-member-meta">
-										<h4 class="team-member-name"><span class="main-color">R</span>aghav <span class="main-color">G</span>upta</h4>
+										<h4 class="team-member-name"><span class="main-color">P</span>ritish <span class="main-color">S</span>eth</h4>
 										<div class="team-member-role">Developer</div>
 									</div>
 								</div>
