--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 							<div class="team-member">
 								<div class="team-member-holder wow flipInY" data-wow-duration="1s" data-wow-delay="300ms">
 									<div class="team-member-image">
-										<img src="images/team/member-1.jpg" alt="" /> <!-- Change Image -->	
+										<img src="images/team/member-4.jfif" alt="" /> <!-- Change Image -->	
 										<div class="team-overlay">
 											<div class="img-overlay"></div>
 										</div>
@@ -357,7 +357,7 @@
 										</div>
 									</div>
 									<div class="team-member-meta">
-										<h4 class="team-member-name"><span class="main-color">N</span>ikki <span class="main-color">G</span>oel</h4>
+										<h4 class="team-member-name"><span class="main-color">R</span>aghav <span class="main-color">G</span>upta</h4>
 										<div class="team-member-role">Developer</div>
 									</div>
 								</div>
